[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/kenvector_future.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/menus/title/end_screen.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 44
font_data = ExtResource( 1 )

[node name="end_screen" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 766.0
margin_bottom = 433.0
rect_scale = Vector2( 0.800165, 0.765594 )
color = Color( 0, 0, 0, 0.294118 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
margin_left = 170.0
margin_top = 96.0
margin_right = 636.0
margin_bottom = 376.0
rect_min_size = Vector2( 300, 200 )
custom_constants/separation = 6
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_right = 466.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( -256, -200 )
custom_fonts/font = SubResource( 1 )
text = "Race Complete"
align = 1
valign = 1

[node name="SecondsLabel" type="Label" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 466.0
margin_bottom = 106.0
rect_pivot_offset = Vector2( -256, -200 )
custom_fonts/font = SubResource( 1 )
text = "0 Seconds"
align = 1
valign = 1

[node name="Label3" type="Label" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 466.0
margin_bottom = 162.0
rect_pivot_offset = Vector2( -256, -200 )
custom_fonts/font = SubResource( 1 )
text = "1st Place"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 168.0
margin_right = 466.0
margin_bottom = 188.0
rect_min_size = Vector2( 0, 20 )

[node name="RetryButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_left = 143.0
margin_top = 194.0
margin_right = 323.0
margin_bottom = 234.0
rect_min_size = Vector2( 180, 40 )
size_flags_horizontal = 4
text = "Retry"

[node name="QuitButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_left = 143.0
margin_top = 240.0
margin_right = 323.0
margin_bottom = 280.0
rect_min_size = Vector2( 180, 40 )
size_flags_horizontal = 4
text = "Quit"

[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
